...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="mainListener"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="mainListener"
        app:layout_constraintVertical_bias="0.088" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="mainListener"
        app:layout_constraintVertical_bias="0.196" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="105dp"
...
